regression/fail/pat.3.sml
val {x = y, x = z} = {x = 13};
